corrections on hover and regression display of results from first search input

--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
@@ -12,13 +12,39 @@
   position: absolute;
   max-height: 400px;
   overflow-y: auto;
+  overflow-x: hidden;
   z-index: 1000;
   left: 0;
   right: 0;
   width: 100%;
   box-sizing: border-box;
-  padding-right: 20px;
   margin: 0;
+}
+
+.search-result .list-group-item {
+  transition: transform 0.2s ease, background-color 0.2s ease;
+  cursor: pointer;
+  border: none;
+  background-color: white;
+  padding-right: 1.25rem;
+  padding-left: 1.25rem;
+}
+
+/* Keep pop effect on hover and ::after create a fake element (with same color bg) to hide white background left by the hover pop effect */
+.search-result .list-group-item:hover {
+  transform: translateY(-2px);
+  background-color: #9bb6fc;
+}
+
+.search-result .list-group-item:hover::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: #9bb6fc;
+  z-index: -1;
 }
 
 .search-result::-webkit-scrollbar {
@@ -42,25 +68,12 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.search-result .list-group-item {
-  transition: transform 0.2s ease, background-color 0.2s ease;
-  cursor: pointer;
-  border: none;
-  background-color: white;
-}
-
-.search-result .list-group-item:hover {
-  transform: translateY(-2px);
-  background-color: #f0f4ff;
-}
-
 .drop-down-body {
   padding: 1rem;
   max-height: 30vh;
   overflow-y: auto;
   padding-right: 20px;
 }
-
 
 .circle-icon {
   display: flex;
