--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -37,14 +37,14 @@
     <section *ngIf="searchResults && searchResults.length > 0" class="container-custom" #searchResultsSection>
       <div class="border-0 rounded-3 custom-dropdown">
         <ul class="list-group mt-2 search-result ">
-          <li class="list-group-item card py-2" *ngFor="let post of searchResults">
+          <li class="list-group-item py-2" *ngFor="let post of searchResults">
             <div class="row">
               <div class="col-12">
                 <a (click)="openPost(post.slug, $event)" class="btn-link stretched-link text-reset">
                   <h6 class="fw-bold secondary-heading" [innerHTML]="highlightText(post.titleText) | trustHtml"></h6>
                 </a>
                 <a (click)="openPost(post.slug, $event)" class="btn-link stretched-link text-reset">
-                  <p class="text-truncate-custom"><span [innerHTML]="highlightText(post.excerptText) | trustHtml"
+                  <p class="text-truncate"><span [innerHTML]="highlightText(post.excerptText) | trustHtml"
                       style="white-space: nowrap;"></span></p>
                 </a>
               </div>
