correction to select text on double-click from generic-input component

--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20350,3 +20350,9 @@ h1.secondary-heading,
 .background-opacity {
   background: #FFFFFF08;
 }
+
+input::selection,
+textarea::selection {
+  background: #9bb6fc;
+  color: white;
+}
