white color change into variable theme.css for text selection in input

--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20354,5 +20354,5 @@ h1.secondary-heading,
 input::selection,
 textarea::selection {
   background: var(--ar-blue-step);
-  color: white;
+  color: var(--ar-light);
 }
