addind missing models

--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -4,6 +4,7 @@
 
 :host ::ng-deep * {
     color: #2C4057;
+    --ar-body-color: #2C4057;
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
