--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20313,7 +20313,7 @@ h1.secondary-heading,
 }
 
 .quotation-container {
-  background-color: var(--ar-secondary);
+  background-color: var(--ar-primary);
   padding: 1.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
