changing generic simple-uploader

--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -25,12 +25,12 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     border-bottom-width: 0px;
 }
 
-:host ::ng-deep .btn:hover {
-    background-color: #ECF5FF;
-}
-
 :host ::ng-deep .form-control:focus {
     color: #2C4057;
+}
+
+:host ::ng-deep .btn:hover {
+    background-color: #ECF5FF;
 }
 
 :host ::ng-deep .btn-secondary {
@@ -46,6 +46,18 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 :host ::ng-deep .btn-secondary:hover i {
+    color: #2C4057;
+}
+
+:host ::ng-deep .btn.btn-outline-primary {
+    color: #2C4057;
+}
+
+.btn.btn-outline-primary:hover {
+    color: var(--ar-secondary);
+}
+
+:host ::ng-deep .btn.btn-outline-secondary {
     color: #2C4057;
 }
 
