--- a/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.css
@@ -1,49 +1,20 @@
-.form-div {
-  min-height: auto;
-  margin: 0px;
-}
-
-.mat-icon-upload {
-  transform: scale(3);
-}
-
-.container {
-  width: 615px;
-  height: 200px;
-  padding: 2rem;
-  text-align: center;
-  border: dashed 1px #979797;
-  position: relative;
-  margin: 0 auto;
-}
-
-.container input {
-  opacity: 0;
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.container label {
-  width: 183px;
-  height: 44px;
-  border-radius: 5px;
-  padding: 8px 16px;
-}
-
-.container h3 {
-  font-size: 20px;
-  font-weight: 600;
-  margin-top: 20px;
-}
-
-.send-button {
-  margin-top: 20px;
-}
-
 .max-size {
-  padding-top: 20px
+  color: #999;
+  font-size: 0.9rem;
+}
+
+.download-card {
+  cursor: pointer;
+  border: 4px dashed #ccccccb9;
+  text-align: center;
+  padding: 20px;
+  transition: border-color 0.3s ease;
+}
+
+.download-card:hover {
+  border-color: var(--ar-secondary);
+}
+
+.download-card.dragover {
+  border-color: var(--ar-secondary);
 }
