--- a/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.html
@@ -1,7 +1,9 @@
-<input class="form-control" type="file" #fileDropRef id="fileDropRef" (change)="fileBrowseHandler($event.target)">
-<div class="progress mb-3 mt-2" *ngIf="progress/files.length*100">
-  <div class="progress-bar fw-semibold" role="progressbar" style="width: 45%"
-    [attr.aria-valuenow]="progress/files.length*100" aria-valuemin="0" aria-valuemax="100">
-    {{progress/files.length*100}}%
-  </div>
+<div class="h-100 rounded-1 download-card p-4 d-flex flex-column align-items-center justify-content-center"
+  (click)="onCardClick()" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
+  <input class="form-control d-none" type="file" #fileDropRef id="fileDropRef"
+    (change)="fileBrowseHandler($event.target)">
+  <h6>Choisissez des fichiers ou déposez-les ici</h6>
+  <i class="ai-upload fs-1 mb-3"></i>
+  <p class="max-size">Formats acceptés : PDF, JPEG, PNG, HEIC, jusqu'à 50 Mo</p>
+  <label class="btn btn-outline-secondary m-auto rounded-1">Parcourir</label>
 </div>
