--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -15,18 +15,22 @@
               ?asso.affaire.denomination : (asso.affaire.firstname+ ' ' +
               asso.affaire.lastname) }} -{{asso.affaire.address}}</h6>
           </div>
+
           <div class="row align-items-center" *ngIf="asso.services">
             <!-- Les boutons pills -->
-            <a *ngFor="let service of asso.services"
+            <a *ngFor="let service of asso.services;let indexService = index"
+              (click)="selectServiceIndex(indexService, index)"
+              [ngClass]="{'btn-secondary' : selectedAssoIndex == index && indexService == selectedServiceIndex, 'btn-outline-primary': selectedAssoIndex != index || indexService!=selectedServiceIndex}"
               class="btn btn-secondary rounded-pill mt-2 ms-1 mt-md-3 ms-md-3 col-auto pill">
-              {{service.customLabel?service.customLabel : service.serviceType.label }}
+              {{service.customLabel?service.customLabel : service.serviceType.label }} <i
+                *ngIf="selectedAssoIndex == index && indexService == selectedServiceIndex"
+                class="ai-circle-arrow-right ms-2"></i>
             </a>
           </div>
         </div>
       </div>
     </div>
   </section>
-
 
   <section>
     <div class="pb-3 row align-items-center" *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null">
@@ -59,7 +63,7 @@
         *ngFor="let provision of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions">
         <li class="nav-item"
           *ngIf="provision.provisionType.provisionScreenType.code == PROVISION_SCREEN_TYPE_ANNOUNCEMENT">
-          <!-- hrefvar en fonction de l'annonce legale -->
+          <!-- TODO : hrefvar en fonction de l'annonce legale -->
           <a href="#profile" class="nav-link" data-bs-toggle="tab" role="tab">
             Annonce légale
           </a>
@@ -74,140 +78,143 @@
     </ul>
 
     <!-- Tabs content -->
-    <div class="tab-content quotation-container" *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null">
+    <div class="tab-content " *ngIf="selectedAssoIndex!=null && selectedServiceIndex!=null">
       <div class="tab-pane fade show active" id="documents" role="tabpanel">
-        <h6><i class="ai-circle-info me-2"></i>
-          Information</h6>
-        <div class="pb-3">
-          <table class="full-width">
-            <ng-container
-              *ngFor="let assoServiceFieldType of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes; let i = index">
-              <tr>
-                <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXT">
-                  <generic-input [(model)]="assoServiceFieldType.stringValue"
-                    [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
-                    [propertyName]='"stringFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
-                    [maxLength]="255"></generic-input>
-                </td>
-                <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXTAREA">
-                  <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
-                    [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
-                    [propertyName]='"textAreaFieldType"+i'
-                    [isMandatory]="assoServiceFieldType.isMandatory"></generic-textarea>
-                </td>
-                <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_DATE">
-                  <generic-date-picker [(model)]="assoServiceFieldType.dateValue"
-                    [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
-                    [propertyName]='"dateFieldType"+i'
-                    [isMandatory]="assoServiceFieldType.isMandatory"></generic-date-picker>
-                </td>
-                <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_INTEGER">
-                  <generic-input [(model)]="assoServiceFieldType.integerValue"
-                    [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
-                    [propertyName]='"integerFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
-                    type="number"></generic-input>
-                </td>
-                <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_SELECT">
-                  <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
-                    [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
-                    [propertyName]='"selectFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
-                    [isMandatory]="assoServiceFieldType.isMandatory"></select-value-service-field-type>
-                </td>
-              </tr>
-            </ng-container>
-          </table>
+        <div class="quotation-container">
+          <h6><i class="ai-circle-info me-2"></i>
+            Information</h6>
+          <div class="pb-3">
+            <table class="full-width">
+              <ng-container
+                *ngFor="let assoServiceFieldType of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes; let i = index">
+                <tr>
+                  <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXT">
+                    <generic-input [(model)]="assoServiceFieldType.stringValue"
+                      [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
+                      [propertyName]='"stringFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
+                      [maxLength]="255"></generic-input>
+                  </td>
+                  <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXTAREA">
+                    <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
+                      [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
+                      [propertyName]='"textAreaFieldType"+i'
+                      [isMandatory]="assoServiceFieldType.isMandatory"></generic-textarea>
+                  </td>
+                  <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_DATE">
+                    <generic-date-picker [(model)]="assoServiceFieldType.dateValue"
+                      [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
+                      [propertyName]='"dateFieldType"+i'
+                      [isMandatory]="assoServiceFieldType.isMandatory"></generic-date-picker>
+                  </td>
+                  <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_INTEGER">
+                    <generic-input [(model)]="assoServiceFieldType.integerValue"
+                      [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
+                      [propertyName]='"integerFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
+                      type="number"></generic-input>
+                  </td>
+                  <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_SELECT">
+                    <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
+                      [label]="assoServiceFieldType.serviceFieldType.label" [form]="informationForm"
+                      [propertyName]='"selectFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
+                      [isMandatory]="assoServiceFieldType.isMandatory"></select-value-service-field-type>
+                  </td>
+                </tr>
+              </ng-container>
+            </table>
+          </div>
+        </div>
+
+        <div
+          *ngFor="let assoServiceDocument of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceDocuments; let i = index"
+          class="quotation-container mb-4">
+
+          <h6 class="mb-3 d-flex align-items-center">
+            <i class="ai-paperclip pe-2"></i> Pièces justificatives
+          </h6>
+          <div class="row g-3">
+            <div class="col-12 col-md-6">
+              <div class="card h-100 d-flex flex-column justify-content-between p-3">
+                <!-- Liste des fichiers déjà uploadés -->
+                <div>
+                  <ul>
+                    <li>
+                      {{ assoServiceDocument.typeDocument.customLabel ? assoServiceDocument.typeDocument.customLabel:
+                      assoServiceDocument.typeDocument.label }}
+                    </li>
+                  </ul>
+                </div>
+
+                <!-- Contenu du bas : blue-card + date -->
+                <div>
+                  <!-- Carte de statut (blue-card) -->
+                  <div class="blue-card card rounded-1 mb-3">
+                    <div class="row justify-content-between align-items-center p-2">
+                      <p class="col-auto mb-0">Nom-du-fichier.pdf</p>
+                      <a class="col-auto"><i class="ai-trash" (click)="deleteFile()"></i></a>
+                    </div>
+
+                    <div class="p-2">
+                      <!-- Gestion des états -->
+                      <ng-container *ngIf="isError; else loadingOrDone">
+                        <div class="d-flex align-items-center mb-2 text-danger-emphasis">
+                          <i class="ai-circle-x me-2"></i>
+                          <p class="mb-0">Erreur</p>
+                        </div>
+                        <div class="progress mb-3" style="height: 4px;">
+                          <div class="progress-bar bg-danger" [ngStyle]="{'width': downloadingPercentage + '%' }"></div>
+                        </div>
+                      </ng-container>
+
+                      <ng-template #loadingOrDone>
+                        <div *ngIf="downloadingPercentage !== 100; else finished">
+                          <div class="d-flex align-items-center mb-2 text-secondary">
+                            <p class="mb-0 me-3">{{downloadingPercentage}} KB sur {{totalFileWeight}} KB •</p>
+                            <div class="spinner-border spinner-border-sm me-2" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                            Chargement
+                          </div>
+                          <div class="progress mb-3" style="height: 4px;">
+                            <div class="progress-bar bg-body-secondary"
+                              [ngStyle]="{'width': downloadingPercentage + '%' }"></div>
+                          </div>
+                        </div>
+                        <ng-template #finished>
+                          <div class="d-flex align-items-center mb-2 text-success-emphasis">
+                            <i class="ai-circle-check-filled me-2"></i>
+                            <p class="mb-0">Terminé</p>
+                          </div>
+                          <div class="progress mb-3" style="height: 4px;">
+                            <div class="progress-bar bg-success" [ngStyle]="{'width': downloadingPercentage + '%' }">
+                            </div>
+                          </div>
+                        </ng-template>
+                      </ng-template>
+                    </div>
+                  </div>
+
+                  <!-- Date du document -->
+                  <div class="row align-items-center">
+                    <div class="col-4">Date du document*</div>
+                    <div class="col-8">
+                      <generic-datetime-picker></generic-datetime-picker>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <!-- Colonne droite : drop de fichiers -->
+            <div class="col-12 col-md-6">
+              <single-upload [entity]="assoServiceDocument" [entityType]="ASSO_SERVICE_DOCUMENT_ENTITY_TYPE.entityType"
+                [isDirectUpload]="true" [attachmentType]="assoServiceDocument.typeDocument.attachmentType"
+                [typeDocument]="assoServiceDocument.typeDocument" (endOfUpload)="refreshCurrentAssoAffaireOrder()">
+              </single-upload>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-
-  <!--
-  <section class="quotation-container">
-    <h6><i class="ai-paperclip pe-2"></i>Pièces justificatives</h6>
-    <div class="row">
-      <div class="col-6">
-        <ul>
-          <li *ngFor="let doc of uploadedDocuments">
-            {{doc}}
-          </li>
-        </ul>
-        <div class="blue-card card rounded-1">
-          <div class="row d-flex justify-content-between align-items-center p-1">
-            <p class="col-auto mb-0">Nom-du-fichier.pdf</p>
-            <a class="col-auto"><i class="ai-trash" (click)="deleteFile()"></i></a>
-          </div>
-
-          <div class="row p-1">
-            <div *ngIf="isError">
-              <div class="row d-flex justify-content-start align-items-center p-1">
-                <i class="col-auto ai-circle-x me-2 text-danger-emphasis"></i>
-                <p class="col-auto mb-0 text-danger-emphasis">Erreur</p>
-              </div>
-              <div class="fs-sm fw-semibold mb-2"></div>
-              <div class="progress mb-3" style="height: 4px;">
-                <div class="progress-bar bg-danger" role="progressbar"
-                  [ngStyle]="{'width': downloadingPercentage + '%'}" aria-valuenow="55" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div *ngIf="downloadingPercentage!==100 && !isError">
-              <div class="row d-flex justify-content-start align-items-center p-1">
-                <div class="col-auto mb-0">
-                  <p class="m-0 light-grey">{{downloadingPercentage}} KB sur {{totalFileWeight}} KB &#x2022;</p>
-                </div>
-                <div class="col-auto mb-0">
-                  <div class="spinner-border spinner-border-sm me-1" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                  </div> Chargement
-                </div>
-              </div>
-              <div class="row">
-                <div class="progress mb-3" style="height: 4px;">
-                  <div class="progress-bar bg-body-secondary" role="progressbar"
-                    [ngStyle]="{'width': downloadingPercentage + '%'}" aria-valuenow="55" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-            <div *ngIf="downloadingPercentage===100 && !isError">
-              <div class="row d-flex justify-content-start align-items-center p-1">
-                <i class="col-auto ai-circle-check-filled me-2 text-success-emphasis"></i>
-                <p class="col-auto mb-0">Terminé</p>
-              </div>
-              <div class="progress mb-3" style="height: 4px;">
-                <div class="progress-bar bg-success" role="progressbar"
-                  [ngStyle]="{'width': downloadingPercentage + '%'}" aria-valuenow="55" aria-valuemin="0"
-                  aria-valuemax="100"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div>
-          <div class="row my-3">
-            <div class="col-4">
-              Date du document*
-            </div>
-            <div class="col-8">
-              <generic-datetime-picker>
-              </generic-datetime-picker>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-6">
-        <div class="h-100 rounded-1 download-card p-4 d-flex flex-column align-items-center justify-content-center"
-          (click)="onCardClick()" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)"
-          (drop)="onDrop($event)">
-          <input class="d-none" type="file" #fileDropRef id="fileDropRef" multiple (change)="onFileSelected($event)" />
-          <h6>Choisissez des fichiers ou déposez-les ici</h6>
-          <i class="ai-upload fs-1 mb-3"></i>
-          <p class="max-size">Formats acceptés : PDF, JPEG, PNG, HEIC, jusqu'à 50 Mo</p>
-          <label for="fileDropRef" class="btn btn-outline-secondary m-auto rounded-1">Parcourir</label>
-        </div>
-      </div>
-    </div>
-  </section>
--->
 </div>
