--- a/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
+++ b/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
@@ -45,7 +45,7 @@
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" *ngFor="let item of serviceFamilies;">
       <a class="nav-link" [class.active]="item == selectedFamilyTab" (click)="selectFamilyTab(item)">
-        {{item.label}}
+        {{item.customLabel}}
       </a>
     </li>
   </ul>
@@ -66,7 +66,7 @@
         <div class="card dark-blue-dropdown rounded-3 mt-3"
           [ngClass]="{ 'expanded-card':  isExpanded(serviceType.id) }">
           <div class="card-header d-flex justify-content-between align-items-center p-0 pt-3">
-            <h5 class="card-title mb-0">{{ serviceType.label }}</h5>
+            <h5 class="card-title mb-0">{{ serviceType.customLabel }}</h5>
             <button type="button" class="btn btn-link rounded-circle custom-btn" (click)="toggleCard(serviceType)">
               <span class="circle-icon">
                 <i [ngClass]=" isExpanded(serviceType.id) ? 'ai-chevron-up' : 'ai-chevron-down'" class="fs-4"></i>
@@ -81,7 +81,7 @@
                 <li class="d-flex pb-2 mb-1">
                   <span class="bg-primary mt-2 checkbox-custom"></span>
                   <a class="text-decoration-none text-gray" data-bs-toggle="tooltip" [title]="item.code"
-                    data-bs-placement="top" [innerHTML]="item.code.concat(' ',item.label) | trustHtml"></a>
+                    data-bs-placement="top" [innerHTML]="getConcatenatedLabel(item) | trustHtml"></a>
                 </li>
               </div>
             </div>
