--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -57,6 +57,13 @@
           </tr>
           <tr>
             <td>
+              <generic-toggle [(model)]="selectedEntity.isMergeable"
+                label="Peut être fusionné à d'autres services fusionnable" [form]="entityForm"
+                propertyName="isMergeable" [isDisabled]="!editMode"></generic-toggle>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-service-family [(model)]="selectedEntity.serviceFamily" label="Famille de service"
                 [form]="entityForm" propertyName="serviceFamily" [isMandatory]="true"
                 [isDisabled]="!editMode"></select-service-family>
