--- a/client/src/app/modules/quotation/components/select-multi-service-type-dialog/select-multi-service-type-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-multi-service-type-dialog/select-multi-service-type-dialog.component.html
@@ -10,6 +10,12 @@
     </tr>
     <tr *ngIf="!isJustSelectServiceType">
       <td>
+        <generic-input [(model)]="customLabel" label="Libellé personnalisé" [form]="serviceTypeForm"
+          propertyName="customLabel" [isMandatory]="false" [maxLength]="2000"></generic-input>
+      </td>
+    </tr>
+    <tr *ngIf="!isJustSelectServiceType">
+      <td>
         <generic-textarea [(model)]="customerComment" label="Commentaire client" [form]="serviceTypeForm"
           propertyName="customerComment" [isMandatory]="false" [isDisabled]="false"></generic-textarea>
       </td>
