--- a/client-myjss/src/app/modules/quotation/old/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/old/checkout/checkout.component.html
@@ -1,3 +1,5 @@
+<div> Checkout works !</div>
+
 <div class="d-none d-lg-block bg-secondary position-fixed top-0 start-0 h-100" style="width: 52.5%;"></div>
 <div class=" container position-relative z-2 pt-5 pb-lg-5 pb-md-4 pb-2">
   <div class="row">
