--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20345,6 +20345,15 @@ h1.secondary-heading,
   height: 250px;
 }
 
+.text-truncate-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
+
 .card-title-truncate {
   display: -webkit-box;
   -webkit-line-clamp: 2;
