--- a/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
@@ -1,4 +1,4 @@
-<ng-template #cardActions let-notification='notification' let-displayEdit="displayEdit">
+<!--ng-template #cardActions let-notification='notification' let-displayEdit="displayEdit">
   <mat-card-actions style="display: flex;right: 22px;position: absolute;">
     <div class="menu notif" (click)="setAsRead($event,notification);$event.stopPropagation();"
       matTooltip="Marquer comme lu (maintenir CTRL pour l'appliquer à l'ensemble de l'onglet)">
@@ -450,4 +450,4 @@
       </tr>
     </table>
   </form>
-</div>
+</div-->
