--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -71,9 +71,9 @@
   </div>
 </div>
 <mat-menu #menu="matMenu" style="max-width: 100%;">
-  <div mat-menu-item>
+  <!--div mat-menu-item>
     <span routerLink="/dashboard/kanban">Nouveau tableau</span>
-  </div>
+  </div-->
   <mat-divider></mat-divider>
   <div mat-menu-item *ngFor="let checkbox of checkboxes">
     <mat-checkbox [(ngModel)]="checkbox.value" (click)="toggleDisplay(checkbox.id);$event.stopPropagation()">
